cloudformation/network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to build course end project VPC

Resources:

  # ---------------- VPC ----------------
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: CEP-VPC
        - Key: Environment
          Value: Course-End-Project

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CEP-IGW
        - Key: Environment
          Value: Course-End-Project

  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref IGW

  RouteTablePublic:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: CEP-Public-RouteTablePublic
        - Key: Environment
          Value: Course-End-Project

  RoutePublic:
    Type: AWS::EC2::Route
    DependsOn: AttachIGW
    Properties:
      RouteTableId: !Ref RouteTablePublic
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  NatEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CEP-NAT-EIP
        - Key: Environment
          Value: Course-End-Project

  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn:
      - AttachIGW
      - PublicSubnetA
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: CEP-NAT-Gateway
        - Key: Environment
          Value: Course-End-Project

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags: 
        - Key: Name
          Value: CEP-Private-RouteTable
        - Key: Environment
          Value: Course-End-Project

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnetARoute:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetBRoute:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTable

  # ---------------- Subnets ----------------
  # Public subnets
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
  
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true

  # Private subnets
  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: false
  
  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: false

  # Subnet associations
  PublicSubnetARoute:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref RouteTablePublic

  PublicSubnetBRoute:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref RouteTablePublic

  # ---------------- Security Groups ----------------
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: ALB Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: CEP-ALB-SG
        - Key: Environment
          Value: Course-End-Project
  
  FrontendSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Frontend SG
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSG
      Tags:
        - Key: Name
          Value: CEP-Frontend-SG
        - Key: Environment
          Value: Course-End-Project

  BackendSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Backend security group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          SourceSecurityGroupId: !Ref FrontendSG
      Tags:
        - Key: Name
          Value: CEP-Backend-SG
        - Key: Environment
          Value: Course-End-Project

  # ---------------- ALBs ----------------
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: ALB-CEP
      Subnets:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetB
      SecurityGroups:
        - !Ref ALBSG
      Scheme: internet-facing
      Type: application
      Tags:
        - Key: Name
          Value: CEP-ALB
        - Key: Environment
          Value: Course-End-Project

  # ---------------- Frontend Target Groups ----------------
  FrontendBlueTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: CEP-Frontend-Blue-TG
      VpcId: !Ref VPC
      Port: 80
      Protocol: HTTP
      TargetType: ip

      HealthCheckPath: /
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2

      Matcher:
        HttpCode: 200

      Tags:
        - Key: Name
          Value: CEP-Frontend-Blue-TG
        - Key: Environment
          Value: Course-End-Project

  FrontendGreenTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: CEP-Frontend-Green-TG
      VpcId: !Ref VPC
      Port: 80
      Protocol: HTTP
      TargetType: ip

      HealthCheckPath: /
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2

      Matcher:
        HttpCode: 200

      Tags:
        - Key: Name
          Value: CEP-Frontend-Green-TG
        - Key: Environment
          Value: Course-End-Project

  HTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
      - Type: fixed-response
        FixedResponseConfig:
          StatusCode: '404'
          ContentType: text/plain
          MessageBody: Not Found

  FrontendListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref HTTPListener
      Priority: 1
      Conditions:
        - Field: path-pattern
          Values:
            - '/*'
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref FrontendBlueTargetGroup
                Weight: 1
              - TargetGroupArn: !Ref FrontendGreenTargetGroup
                Weight: 0

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC

  PublicSubnetAId:
    Description: Public Subnet A ID
    Value: !Ref PublicSubnetA

  PublicSubnetBId:
    Description: Public Subnet B ID
    Value: !Ref PublicSubnetB

  PrivateSubnetAId:
    Description: Private Subnet A ID
    Value: !Ref PrivateSubnetA

  PrivateSubnetBId:
    Description: Private Subnet B ID
    Value: !Ref PrivateSubnetB

  FrontendSecurityGroupId:
    Description: Frontend Security Group ID
    Value: !Ref FrontendSG

  BackendSecurityGroupId:
    Description: Backend Security Group ID
    Value: !Ref BackendSG

  FrontendBlueTargetGroupArn:
    Description: Frontend blue target group ARN
    Value: !Ref FrontendBlueTargetGroup

  FrontendGreenTargetGroupArn:
    Description: Frontend green target group ARN
    Value: !Ref FrontendGreenTargetGroup

  FrontendListenerRuleArn:
    Description: Frontend production listener rule ARN
    Value: !Ref FrontendListenerRule

  HTTPListenerArn:
    Description: ALB HTTP listener ARN
    Value: !Ref HTTPListener

  ALBDNSName:
    Description: ALB DNS Name
    Value: !GetAtt ALB.DNSName
